# test_notification

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  ruff.toml
src/: exceptions.py  run_uvicorn.py
src/app/: events.py  main.py  middlewares.py  openapi.py
src/choices/: __init__.py  api_choices.py  service_choices.py
src/config/: logger_setup.py  settings.py  uvicorn_logger.py
src/db/: database.py
src/db_services/: notifications_repository.py  users_repository.py
src/models/: notification.py  user.py
src/rest_models/: base_schema.py  notification_schema.py  pagination.py  token.py  user.py
src/routers/: exception_handlers.py  healthcheck.py  notifications_router.py  users_router.py
src/services/: auth_service.py  base_service.py  notification_service.py
